service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: devops
  labels:
    app: nginx

spec:
  selector:
    app: nginx

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http

  type: ClusterIP
