networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: nginx-network-policy
  namespace: devops

spec:
  podSelector:
    matchLabels:
      app: nginx

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - ports:
    - protocol: TCP
      port: 80

  egress:
  - ports:
    - protocol: TCP
      port: 443
